--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,22 @@
 <body ng-controller="PhoneListCtrl">
 
   <ul>
+  	<p>Hello, {{name}}!</p>
+
+	<p>
+	<table>
+	  <tr><th>row number</th></tr>
+	  <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td ng-repeat="e in [0, 1, 2, 3, 4, 5, 6, 7]">{{e+1}}</td></tr>
+	</table>
+	</p>
+
+
     <li ng-repeat="phone in phones">
       <span>{{phone.name}}</span>
       <p>{{phone.snippet}}</p>
     </li>
+
+    <p>Total number of phones: {{phones.length}}</p>
   </ul>
 
 </body>
