--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
 
 	<p>
 	<table>
-	  <tr><th>row number</th></tr>
-	  <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td ng-repeat="e in [0, 1, 2, 3, 4, 5, 6, 7]">{{e+1}}</td></tr>
+	  <tr><th>foorly formated multiplicaiton table</th></tr>
+	  <tr ng-repeat="i in [1, 2, 3, 4, 5, 6, 7, 8]"><td ng-repeat="e in [1, 2, 3, 4, 5, 6, 7, 8]">{{e*i}}</td></tr>
 	</table>
 	</p>
 
