--- a/app/index.html
+++ b/app/index.html
@@ -1,33 +1,35 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html ng-app="phonecatApp" ng-controller="PhoneListCtrl">
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+<title ng-bind-template="Google Phone Gallery: {{query}}">Google Phone Gallery</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="js/controllers.js"></script>
 </head>
-<body ng-controller="PhoneListCtrl">
+<body>
 
-  <ul>
-  	<p>Hello, {{name}}!</p>
+	<div class="container-fluid">
+	  <div class="row">
+	    <div class="col-md-2">
+	      <!--Sidebar content-->
 
-	<p>
-	<table>
-	  <tr><th>foorly formated multiplicaiton table</th></tr>
-	  <tr ng-repeat="i in [1, 2, 3, 4, 5, 6, 7, 8]"><td ng-repeat="e in [1, 2, 3, 4, 5, 6, 7, 8]">{{e*i}}</td></tr>
-	</table>
-	</p>
+	      Search: <input ng-model="query">
+	    </div>
+	    <div class="col-md-10">
+	      <!--Body content-->
 
+	      <ul class="phones">
+	        <li ng-repeat="phone in phones | filter:query">
+	          {{phone.name}}
+	          <p>{{phone.snippet}}</p>
+	        </li>
+	      </ul>
 
-    <li ng-repeat="phone in phones">
-      <span>{{phone.name}}</span>
-      <p>{{phone.snippet}}</p>
-    </li>
-
-    <p>Total number of phones: {{phones.length}}</p>
-  </ul>
+	    </div>
+	  </div>
+	</div>
 
 </body>
 </html>
